# Project_Extraction-2058CG

./: README.md  pyproject.toml  setup.cfg  test.xml
BDD/: 2025-01-03 donnees test v2.xlsx  clean-database.sql  clean_db.py  import_data.sql  import_xml_data.py  mcd.md  test_CIR_DGFIP_03-02-2025.xml  verif_data.py
dummy_output/: anomalies_siren_luhn.parquet
mon_env/: pyvenv.cfg
src/extraction/: Calcul_Creance_propre(2021).ipynb  Calcul_Creance_propre(2022).ipynb  Calcul_Creance_propre(2023).ipynb  correction_anomalies.py  data_process.py  extraction-2058.ipynb  general.py  model.py  preprocessing.py  utils.py  utils2.py  verif_siren.ipynb
src/extraction_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_data_process.py  test_hello_world.py  test_model.py  test_preprocessing.py  test_utils.py  test_utils1.py  test_utils2.py
