[metadata]
name = extraction_project
version = 0.1.0
description = "Un package pour extraire des données"
author = "mouhamed-fadel"

[options]
packages = find:
package_dir =
    =src
install_requires =
    pandas
    numpy
    psycopg2
    itables
    scikit-learn

[options.packages.find]
where=src

[options.extras_require]
dev =
    pytest>=7.0
    pytest-cov

[options.entry_points]
console_scripts =
    extraction-cli = extraction_project.cli:main

[tool:pytest]
testpaths = tests
python_files = test_*.py
